<resources>
    <string name="app_name">Donit</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="not_a_user">Not a user yet?</string>
    <string name="sign_up_as_donor">SIGN UP AS DONOR</string>
    <string name="sign_up_as_organsation">SIGN UP AS ORGANISATION</string>
    <string name="donor_form">DONOR FORM</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter full name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="create_password">Create Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_number">Enter your mobile number</string>
    <string name="submit">SUBMIT</string>
    <string name="select_city">Select your city</string>
    <string name="select_organization">Select an organization if you would like to become a volunteer</string>
    <string name="organization_form">ORGANIZATION FORM</string>
    <string name="organization_type">Type of Organization</string>
    <string name="cause">Cause</string>
    <string name="address">Address</string>
    <string name="enter_cause">State your cause</string>
    <string name="locate">Locate on map</string>
    <string name="reset_password">SEND RESET PASSWORD LINK</string>
    <string name="timer_text">60:00</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="enter_code">Enter verification code</string>
    <string name="verify">VERIFY</string>
    <string name="resend">RESEND CODE</string>
    <string name="nav_header_top_text">Donit</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_mobile_number">Contact</string>
    <string name="no_of_donations">Donations</string>
    <string name="no_of_deliveries">Deliveries</string>
    <string name="organizations">Organizations</string>
    <string name="colon">-</string>
    <string-array name="orgs">

        <item>Select a type</item>
        
        <item>NGO</item>
        <item>Old age home</item>
        <item>Child Empowerment</item>
        <item>Educational</item>
        <item>Health Care</item>
        <item>Arts and Culture</item>
        <item>Women Welfare</item>

    </string-array>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="details_of_donation">Details of donation</string>
    <string name="description">Description</string>
    <string name="status_of_delivery">Status of delivery</string>
    <string name="deliverer_name">Deliverer Name</string>
    <string name="deliverer_contact_number">Deliverer Contact Number</string>
    <string name="donation_image">Donation Image</string>
    <string name="delivery_image">Delivery Image</string>
    <string name="details_of_delivery">Details of Delivery</string>
    <string name="donor_name">Donor Name</string>
    <string name="donor_contact_number">Donor Contact Number</string>
    <string name="donor_address">Source Address</string>
    <string name="deliver_to">Destination</string>
    <string name="event_name">ADD EVENT NAME</string>
    <string name="event_description">Enter event description</string>
    <string name="event_image">Event Image</string>
    <string name="add_event">ADD EVENT</string>
    <string name="story_image">Story image</string>
</resources>