<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DonorSignUpActivity"
    android:layout_margin="@dimen/root_element_margin"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five_dp"
            android:fontFamily="cursive"
            android:text="@string/donor_form"
            android:textAlignment="center"
            android:textColor="@color/stratos"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five_dp"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="@color/sienna"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:id="@+id/nameEditText"
            android:padding="@dimen/margin_five_dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:padding="@dimen/margin_five_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_city"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:id="@+id/mobileNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_organization"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <Spinner
            android:id="@+id/organization_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/edit_text_border" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClickSubmitButton"
            android:padding="3dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>